--- a/view/dashboard.html
+++ b/view/dashboard.html
@@ -15,9 +15,8 @@
             <div></div>
         </div>
         <div class="menu">
-            <a href="/view/index.html">Log/register</a>
-            <a href="/view/dashboard.html">Task</a>
-            <a href="/view/profile.html">Profile</a>
+            <a href="/register.html">Log/register</a>
+            <a href="/profile.html">Profile</a>
         </div>
     </nav>
     <h1>Task Dashboard</h1>
