--- a/view/index.html
+++ b/view/index.html
@@ -10,10 +10,9 @@
     <nav class="navbar">
         <div class="menu-toggle" onclick="toggleMenu()"></div>
         <div class="menu">
+            <a href="/index.html">Home</a>
             <a href="/login.html">Login</a>
             <a href="/register.html">Register</a>
-            <a href="/dashboard.html">Task</a>
-            <a href="/profile.html">Profile</a>
         </div>
     </nav>
 
