--- a/view/profile.html
+++ b/view/profile.html
@@ -8,16 +8,15 @@
 </head>
 <body>
     <nav class="navbar">
-        <a href="/view/index.html" class="logo">Logo</a>
+        <a href="/index.html" class="logo">Logo</a>
         <div class="menu-toggle" onclick="toggleMenu()">
             <div></div>
             <div></div>
             <div></div>
         </div>
         <div class="menu">
-            <a href="/view/index.html">Log/register</a>
-            <a href="/view/dashboard.html">Task</a>
-            <a href="/view/profile.html">Profile</a>
+            <a href="/index.html">Log/register</a>
+            <a href="/dashboard.html">Task</a>
         </div>
     </nav>
     <h1>Your Profile</h1>
