--- a/view/dashboard.html
+++ b/view/dashboard.html
@@ -8,12 +8,9 @@
 </head>
 <body>
     <nav class="navbar">
-        <div class="menu-toggle" onclick="toggleMenu()">
-            <div></div>
-            <div></div>
-            <div></div>
-        </div>
+        <div class="menu-toggle" onclick="toggleMenu()"></div>
         <div class="menu">
+            <a href="/home.html">Home</a>
             <a href="/profile.html">Profile</a>
         </div>
     </nav>
