--- a/view/profile.html
+++ b/view/profile.html
@@ -8,14 +8,13 @@
 </head>
 <body>
     <nav class="navbar">
-        <div class="menu-toggle" onclick="toggleMenu()">
-            <div></div>
-            <div></div>
-            <div></div>
-        </div>
+        <div class="menu-toggle" onclick="toggleMenu()"></div>
         <div class="menu">
-            <a href="/dashboard.html">Task</a>
+            <a href="/home.html">Home</a>
+            <a href="/dashboard.html">Tasks</a>
         </div>
+    </nav>
+
     </nav>
     <h1>Your Profile</h1>
     <div id="profileData"></div>
