--- a/view/register.html
+++ b/view/register.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register</title>
-    <link rel="stylesheet" href="/public/style.css">
+    <link rel="stylesheet" href="/public/login_reg.css">
 </head>
 <body>
     <nav class="navbar">
@@ -32,7 +32,7 @@
                 <input type="password" id="password" placeholder="Enter password" required>
             </div>
             <button type="submit">Submit</button>
-            <p id="toggleForm">Already have an account? <a href="#" id="toggleLogin">Login</a></p>
+            <p id="toggleForm">Already have an account? <a href="/login.html" id="toggleLogin">Login</a></p>
             <p id="message"></p>
         </form>
     </div>
