--- a/view/login.html
+++ b/view/login.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="stylesheet" href="/public/login_reg.css">
+    <link rel="stylesheet" href="/public/login.css">
 </head>
+
 <body>
+    <!-- Навигация слева -->
     <nav class="navbar">
-        <div class="menu-toggle" onclick="toggleMenu()"></div>
         <div class="menu">
             <a href="/index.html">Home</a>
             <a href="/login.html">Login</a>
@@ -17,29 +19,35 @@
     </nav>
 
     <div class="auth-container">
-        <h2 id="formTitle">Login</h2>
-        <form id="authForm">
-            <div id="usernameField" style="display:none;">
-                <label for="username">Username</label>
-                <input type="text" id="username" placeholder="Enter username">
-            </div>
-            <div>
-                <label for="email">Email</label>
-                <input type="email" id="email" placeholder="Enter email" required>
-            </div>
-            <div>
-                <label for="password">Password</label>
-                <input type="password" id="password" placeholder="Enter password" required>
-            </div>
-            <div class="remember-me">
-                <input type="checkbox" id="rememberMe">
-                <label for="rememberMe">Remember Me</label>
-            </div>
-            <button type="submit">Submit</button>
-            <p id="toggleForm">Don't have an account? <a href="/register.html" id="toggleRegister">Register</a></p>
-            <p id="message"></p>
-        </form>
+        <!-- Левая часть с формой -->
+        <div class="left">
+            <h2 id="formTitle">Login</h2>
+            <form id="authForm">
+                <div>
+                    <label for="email">Email</label>
+                    <input type="email" id="email" placeholder="Enter email" required>
+                </div>
+                <div>
+                    <label for="password">Password</label>
+                    <input type="password" id="password" placeholder="Enter password" required>
+                </div>
+                <div class="remember-me">
+                    <input type="checkbox" id="rememberMe">
+                    <label for="rememberMe">Remember Me</label>
+                </div>
+                <button type="submit">Submit</button>
+                <p id="toggleForm">Don't have an account? <a href="/register.html" id="toggleRegister">Register</a></p>
+                <p id="message"></p>
+            </form>
+        </div>
+
+        <!-- Правая часть с картинкой -->
+        <div class="right">
+            <img src="/uploads/img3.png" alt="Login Image">
+        </div>
     </div>
+
     <script src="app.js"></script>
 </body>
+
 </html>
