--- a/public/style.css
+++ b/public/style.css
@@ -25,6 +25,8 @@ body::before {
     background-position: center;
     background-repeat: no-repeat;
     filter: brightness(0.3);
+    pointer-events: none;
+    z-index: 2;
 }
 
 .navbar {
