--- a/view/home.html
+++ b/view/home.html
@@ -34,6 +34,8 @@
             background-position: center;
             background-repeat: no-repeat;
             filter: brightness(0.3);
+            pointer-events: none;
+            z-index: 2;
         }
 
         .navbar {
