--- a/public/edit.css
+++ b/public/edit.css
@@ -1,9 +1,8 @@
-/* Reset styles */
 * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    font-family: Arial, sans-serif;
+    font-family: 'Times New Roman', Times, serif;
 }
 
 body {
