--- a/public/profile.css
+++ b/public/profile.css
@@ -1,8 +1,8 @@
-/* Общие стили */
 * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    font-family: 'Times New Roman', Times, serif;
 }
 
 body {
@@ -101,7 +101,6 @@ body::before {
     color: #333;
 }
 
-/* Стили для аватара */
 #avatar {
     width: 160px;
     height: 160px;
@@ -112,7 +111,6 @@ body::before {
     margin: 20px auto;
 }
 
-/* Кнопки */
 .upload-button,
 .upload-but,
 #logout {
